objects/amc__Team__c.object
<CustomObject>
    <description>Used to group multiple Roles into one specialised group of resources.</description>
    <fields>
        <fullName>amc__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amc__Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>amc__Team_Notes_RT__c</fullName>
        <inlineHelpText>Detailed Notes about the Team</inlineHelpText>
        <label>Team Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Team</label>
    <listViews>
        <fullName>amc__All</fullName>
        <columns>NAME</columns>
        <columns>amc__Active__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>